--- a/package.json
+++ b/package.json
@@ -9,12 +9,13 @@
     "bootstrap": "^4.5.2",
     "email-validator": "^2.0.4",
     "formik": "^2.1.5",
+    "gsap": "^3.5.0",
     "node-sass": "^4.14.1",
     "react": "^16.13.1",
     "react-bootstrap": "^1.3.0",
     "react-dom": "^16.13.1",
     "react-router-dom": "^5.2.0",
-    "react-scripts": "3.4.2",
+    "react-scripts": "^3.4.3",
     "yup": "^0.29.3"
   },
   "scripts": {
